Fix correct displaying of carousel content on smaller devices and some improve css readability

--- a/OnlineRefrigerator/wwwroot/css/site.css
+++ b/OnlineRefrigerator/wwwroot/css/site.css
@@ -7,17 +7,20 @@ a.navbar-brand {
   word-break: break-all;
 }
 
+
 .btnHover:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 
+/*images in tables and details*/
 .ingredients-table-img {
  /*   width: 100%;
     height: 100%;*/
     width: 100px;
     height: 100px;
 }
+
 
 .ingredients-details-img{
 
@@ -26,40 +29,41 @@ a.navbar-brand {
 }
 
 
-
 .ingredients-table-results {
     height: 500px;
     overflow: scroll;
 }
 
 
-/*text on top of carousel image*/
-.text-box-carousel {
-    /*opacity: 0.5;*/
-    text-align: center;
-    position: absolute;
-    padding: 20px;
-    height: auto;
-    width: auto;
-    left: 30%;
-    right: 30%;
-    top: 20%;
-    bottom: 20%;
-
-    /*margin-left: -50px;
-    margin-top: -50px;*/
-    background: rgba(255,255,255,0.8);
+/*text box on top of carousel image*/
+.text-box-carousel {   
+  text-align: center;
+  position: absolute;
+  padding: 20px;
+  height: auto;
+  width: auto;
+  left: 10%;
+  right: 10%;
+  top: 20%;
+  bottom: 20%;
+  color: black;
+  background: rgba(255,255,255,0.8);
+ /* display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  align-content: stretch;*/
 }
 
 
-.text-box-content{
-    font-size: 12px;
+.text-box-content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: center;
 }
 
-/* Provide sufficient contrast against white background */
-/*a {
-  color: #0366d6;
-}*/
 
 .btn-primary {
   color: #fff;
@@ -67,104 +71,147 @@ a.navbar-brand {
   border-color: #1861ac;
 }
 
+
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
   color: #fff;
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
 
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
   font-size: 14px;
 }
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
+
 
 .border-top {
   border-top: 1px solid #e5e5e5;
 }
+
+
 .border-bottom {
   border-bottom: 1px solid #e5e5e5;
 }
 
+
 .box-shadow {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
+
 
 button.accept-policy {
   font-size: 1rem;
   line-height: inherit;
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
+
 html {
   position: relative;
   min-height: 100%;
 }
 
+
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
-  height:100%;
-  /*bottom:0;*/
-  
+  min-height:80vh;  
   font-family: "Roboto", sans-serif;
 }
 
 
-.page-content {
-
-    min-height: 100%;
+.carousel-subtext {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    align-content: center;
 }
+
+
+@media (max-width: 575px) {
+  .carousel-subtext {
+    display: none;
+  }
+}
+
 
 @media (min-width: 576px) {
-    .page-content {
-        max-width: 540px;
-    }
+  .page-content {
+    max-width: 540px;
+   }
 
 
-    .btn {
-        width: 8em;
-    }
+  .btn {
+    width: 8em;
+  }
+
+
+  .text-box-content {
+    font-size: 16px;
+  }
 }
+
 
 @media (min-width: 768px) {
-    .page-content {
-        max-width: 720px;
-    }
-
-    .btn {
-        width: 8em;
-    }
+  .page-content {
+    max-width: 720px;
+  }
 
 
+  html {
+    font-size: 16px;
+  }
+    
+
+  h1 {
+    margin-bottom: 2rem;
+  }
+
+
+  .btn {
+    width: 8em;
+  }      
+
+
+  .text-box-content {
+    font-size: 20px;
+  }     
 }
 
-@media (min-width: 992px) {
-    .page-content {
-        max-width: 960px;
 
-    }
+ @media (min-width: 992px) {
+   .page-content {
+     max-width: 960px;
+   }
 
-    .btn {
-        width: 10em;
-    }
 
+  .btn {
+    width: 10em;
+  }
+
+
+  .text-box-content {
+    font-size: 24px;
+  }
 }
+
 
 @media (min-width: 1200px) {
-    .page-content {
-        max-width: 1140px;
-    }
+  .page-content {
+    max-width: 1140px;
+  }
 
-    .btn {
-        width: 12em;
-    }
+
+  .btn {
+    width: 12em;
+  }
+
+
+  .text-box-content {
+    font-size: 24px;
+  }
 }
 
 
@@ -178,101 +225,108 @@ body {
 
 
 #myCarousel {
-    /*padding: 50px 50px 50px 50px;*/
-    margin-top: 100px;
+   margin-top: 100px;
 }
 
 
 .jumbotron {
-    width: 100%;
-    margin-top:100px;
+  width: 100%;
+  margin-top: 100px;
 }
 
+
 .pb-3 {
-    min-width: 100%;
+  min-width: 100%;
 }
 
 
 .item {
-    max-width: 60%;
-    padding: 50px 20px 50px 20px;
+  max-width: 60%;
+  padding: 50px 20px 50px 20px;
 }
 
-a{
-    color: white;
-    text-decoration: none;
-    /*text-align: center;*/
+
+a {
+  color: white;
+  text-decoration: none;
 }
 
-.table td{
-    
-    text-align: center;
-    vertical-align: middle;
-}
 
-.table th {
-    text-align: center;
-    vertical-align: middle;
-}
-
-.form-group{
-    
-    margin-bottom:0;
+.form-group {
+  margin-bottom: 0;
 }
 
 
 .fa-sort:hover {
-    color: red;
-    cursor: pointer;
+  color: red;
+  cursor: pointer;
 }
 
 
 .btn {
-    width: 8em;
+  width: 8em;
 }
+
+
+
+.text-nowrap {
+  white-space: nowrap;
+}   
+
+
+/*Making table headers fixed in place and allow table body to be scrollable*/
+.table td {
+  text-align: center;
+  vertical-align: middle;
+}
+
+
+.table th {
+  text-align: center;
+  vertical-align: middle;
+}
+
 
 th:first-child {
-    position: sticky;
-    left: 0px;
-    background-color: grey;
-    z-index:2;
+  position: sticky;
+  left: 0px;
+  background-color: grey;
+  z-index: 2;
 }
 
+
 td:first-child {
-    position: sticky;
-    left: 0px;
-    background-color: grey;
+  position: sticky;
+  left: 0px;
+  background-color: grey;
 }
 
 
 .tableFixHead {
   overflow-y: auto;
   height: 60vh;
- 
 }
+
 
 .tableFixHead table {
   border-collapse: collapse;
   width: 100%;
 }
 
+
 .tableFixHead th,
 .tableFixHead td {
   padding: 8px 16px;
 }
 
+
 .tableFixHead th {
   position: sticky;
-  top: 0;  
-  /*z-index:1;*/
+  top: 0;
+    /*z-index:1;*/
 }
 
 
-.table thead th{
-    vertical-align:middle;
-}
-
-
-.text-nowrap {
-    white-space: nowrap;
+.table thead th {
+  vertical-align: middle;
 }
